--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,13 @@
     <uses-permission android:name="android.permission.SEND_SMS"
         tools:ignore="SmsAndCallLogPolicy" />
 
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.SENDTO" />
+            <data android:scheme="smsto" />
+        </intent>
+    </queries>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,17 +23,17 @@
         android:theme="@style/Theme.LineClearance">
         <activity
             android:name=".MainActivity"
-            android:exported="false"
-            android:theme="@style/Theme.LineClearance" />
-        <activity
-            android:name=".SubstationActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.LineClearance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SubstationActivity"
+            android:exported="false" />
         <activity
             android:name=".FeederActivity"
             android:exported="false" />
